--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,6 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^3.0.0
-
   flutter_native_splash: ^2.4.0
 
 flutter:
@@ -29,3 +28,4 @@ flutter_native_splash:
   android: true
   ios: false
   fullscreen: true
+  remove_after: true
